hphp/test/zend/good/Zend/tests/errmsg_026.php.expectf

Fatal error: Class already declared: stdClass in %s/errmsg_026.php on line 3
